--- a/client/src/pages/PagesStyles/CreateProjectPageStyle.css
+++ b/client/src/pages/PagesStyles/CreateProjectPageStyle.css
@@ -34,4 +34,12 @@
 
 button{
     z-index: 1;
+    height: 80px;
+}
+
+.control_buttons_user{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
