--- a/client/src/pages/PagesStyles/AdminPageStyle.css
+++ b/client/src/pages/PagesStyles/AdminPageStyle.css
@@ -2,7 +2,7 @@ body {
     background: rgb(214, 213, 213);
 }
 .wrapper{
-    height: 100%;
+    height: 590px;
     width: 100%;
     display: flex;
     flex-direction: column;
