--- a/client/src/pages/PagesStyles/CreateProjectPageStyle.css
+++ b/client/src/pages/PagesStyles/CreateProjectPageStyle.css
@@ -32,14 +32,14 @@
     position: relative;
 }
 
-button{
-    z-index: 1;
-    height: 80px;
-}
-
 .control_buttons_user{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.user_control_button{
+    z-index: 1;
+    height: 80px;
 }
