--- a/client/src/components/Menu/Authorisation/PopUp.css
+++ b/client/src/components/Menu/Authorisation/PopUp.css
@@ -36,3 +36,9 @@
     transform: scale(1);
     flex-direction: column;
 }
+
+.Pop_up_modal_content.active img{
+    width: 50%;
+    height: 220px;
+    align-self: center;
+}
