--- a/client/src/components/StakingCalculator/Calculator.css
+++ b/client/src/components/StakingCalculator/Calculator.css
@@ -1,10 +1,33 @@
-.calcultor_wrapper{
+.calculator_wrapper{
     padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: baseline;
 }
 
-.calcultor_inputs{
-    margin: 10px;
+.calculator_wrapper label{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.calculator_inputs{
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+}
+
+.calculator_inputs input{
+    display: block;
+    width: 95%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
